[gd_scene load_steps=3 format=3 uid="uid://nspr47l3fuq3"]

[ext_resource type="Texture2D" uid="uid://cjleysgwphey0" path="res://icon.svg" id="1_ftpkd"]
[ext_resource type="Script" path="res://scripts/Input.gd" id="1_gjr43"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_gjr43")

[node name="LeftLane1" type="Sprite2D" parent="."]
position = Vector2(-320, 0)
texture = ExtResource("1_ftpkd")

[node name="LeftLane2" type="Sprite2D" parent="."]
position = Vector2(-192, 0)
texture = ExtResource("1_ftpkd")

[node name="LeftLane3" type="Sprite2D" parent="."]
position = Vector2(-64, 0)
texture = ExtResource("1_ftpkd")

[node name="RightLane1" type="Sprite2D" parent="."]
position = Vector2(64, 0)
texture = ExtResource("1_ftpkd")

[node name="RightLane2" type="Sprite2D" parent="."]
position = Vector2(192, 1)
texture = ExtResource("1_ftpkd")

[node name="RightLane3" type="Sprite2D" parent="."]
position = Vector2(320, 1)
texture = ExtResource("1_ftpkd")
